contrib/db_pools/codegen/tests/ui-fail-nightly/database-types.stderr
error[E0463]: can't find crate for `rocket_db_pools`
 --> tests/ui-fail-nightly/database-types.rs:1:14
  |
1 | #[macro_use] extern crate rocket_db_pools;
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't find crate

error: cannot find derive macro `Database` in this scope
 --> tests/ui-fail-nightly/database-types.rs:9:10
  |
9 | #[derive(Database)]
  |          ^^^^^^^^
  |
help: consider importing one of these derive macros
  |
1 + use rkt_db_pools::Database;
  |
1 + use rkt_db_pools_codegen::Database;
  |

error: cannot find attribute `database` in this scope
  --> tests/ui-fail-nightly/database-types.rs:10:3
   |
10 | #[database("bar")]
   |   ^^^^^^^^

error: cannot find derive macro `Database` in this scope
 --> tests/ui-fail-nightly/database-types.rs:5:10
  |
5 | #[derive(Database)]
  |          ^^^^^^^^
  |
help: consider importing one of these derive macros
  |
1 + use rkt_db_pools::Database;
  |
1 + use rkt_db_pools_codegen::Database;
  |

error: cannot find attribute `database` in this scope
 --> tests/ui-fail-nightly/database-types.rs:6:3
  |
6 | #[database("foo")]
  |   ^^^^^^^^
